--- a/src/styles/FeaturedWorkSection.css
+++ b/src/styles/FeaturedWorkSection.css
@@ -8,21 +8,21 @@
 }
 
 .featured-work-container {
-  transition: background-color 0.3s ease;
+  transition: background-color 0.1s ease;
 }
 
 .featured-work-container h2 {
-  transition: color 0.3s ease;
+  transition: color 0.1s ease;
 }
 
 .featured-work-container:hover {
   background-color: var(--overlay-dark-10-color);
-  transition: background-color 0.3s ease;
+  transition: background-color 0.1s ease;
 }
 
 .featured-work-container:hover h2 {
   color: var(--primary-color);
-  transition: color 0.3s ease;
+  transition: color 0.1s ease;
 }
 
 .featured-work-image-container {
