--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -38,7 +38,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("/assets/background-grain.png");
+    background: url("/assets/background-grain.png");
     opacity: 1;
     z-index: 1;
 }
@@ -48,10 +48,9 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("/assets/background-pattern.png");
-    opacity: 0.2;
+    background: url("/assets/background-pattern.png") repeat;
+    opacity: 0.15;
     z-index: 2;
-    background-repeat: repeat;
 }
 
 .left-column, .right-column {
@@ -96,25 +95,6 @@
     .reversed-grid > .left-column {
         order: 2;
     }
-
-    nav {
-        padding: 8px 24px;
-        background-color: var(--overlay-30-color);
-        align-items: center;
-        border-radius: 24px;
-    }
-    
-    .nav-links, .mode-options {
-        margin: 0;
-        padding: 0;
-        
-        display: flex;
-        gap: 24px;
-        list-style: none;
-
-        font-weight: 100;
-    
-    }
 }
 
 /* --Navigation Styling-- */
@@ -146,7 +126,7 @@ a#LHC {
 
 .nav-links li a, #mode-toggle {
 
-    font-size: 1em;
+    font-size: 0.95rem;
     font-family: "Lexend", sans-serif;
     text-decoration: none;
     color: var(--primary-color);
@@ -157,4 +137,10 @@ a#LHC {
 
 .nav-links li a:hover, #mode-toggle:hover {
     border-bottom: 3px solid var(--primary-color);
+}
+
+@media (max-width: 920px) {
+    nav {
+        padding: 12px 24px;
+    }
 }
