--- a/src/styles/MainContentSection.css
+++ b/src/styles/MainContentSection.css
@@ -7,6 +7,7 @@
 
 .main-content-container {
   padding-top: 64px;
+  padding-bottom: 64px;
   margin: 0 auto;
 }
 
